	  (2013-9017).
	* apps/examples/ostest/Kconfig:  Add configuration options for
	  the FPU test.  There are still many OS test configuration
	  optionst that do not appear in Kconfig (2013-9-18).
	* apps/examples/cc3000:  Condition the CC3000 example on having
	  selected the CC3000 device.  Otherwise, you are prompted for
	  this the CC3000 option on each 'make oldconfig' (2013-9-18).
	* apps/system/usbmonitor/usbmonitor.c:  Fix some bad conditional
	  compilation probably introduced on 2013-9-9 (2013-9-23).
	* apps/system/stackmonitor:  Add a daemon that can be used to
	  monitor stack usage by all threads (2013-9-24).
	* system/usbmsc:  Move examples/usbmsc to system/usbmsc (2013-9-25).
	* system/cdcacm:  Move examples/cdcacm to system/cdcacm (2013-9-25).
	* system/composite:  Move examples/composite to system/composite
	  (2013-9-25).
	* apps/nshlib and apps/readline:  Numerous changes to get NSH
	  working with no file system.  Basically this suppresses I/O
	  redirection and replaces file I/O with calls to low-level
	  console read/write functions.  Suggested by Alan Carvalho de Assis
	  in a somewhat different form. (2013-9-30).
	* apps/nshlib/nsm_routecmds.c:  Add addroute and delroute
	  commands (2013-10-5).
	* apps/system/i2ctool/Kconfig:  Fix default I2C frequency:  400KHz
	  instead of 4MHz.  Suggested by Max Kriegleder (2013-10-10).
	* apps/system/info/Kconfig and Makefile:  Increase stack size.
	  Ken Petit reports that this simple command can exceed its 768
	  stack size under certain conditions.  The size is marginal and
	  has been increased to 1024 by default but is also now configurable
	  (2013-10-14).
	* apps/Makefile:  Need to include external/Make.defs if we want
	  allow external applications to participate in the NuttX
	  configuration.  Suggested by gdi@embedders.org (2013-10-14).
	* apps/examplex/cc3300: Updates as part of larger re-organizaion
	  of CC3000 logic by David Sidrane (2013-10-16).
