@@ -42,6 +42,7 @@ source "$APPSDIR/examples/poll/Kconfig"
 source "$APPSDIR/examples/pwm/Kconfig"
 source "$APPSDIR/examples/posix_spawn/Kconfig"
 source "$APPSDIR/examples/qencoder/Kconfig"
+source "$APPSDIR/examples/random/Kconfig"
 source "$APPSDIR/examples/relays/Kconfig"
 source "$APPSDIR/examples/rgmp/Kconfig"
 source "$APPSDIR/examples/romfs/Kconfig"
