@@ -194,6 +194,10 @@ ifeq ($(CONFIG_EXAMPLES_QENCODER),y)
 CONFIGURED_APPS += examples/qencoder
 endif
 
+ifeq ($(CONFIG_EXAMPLES_RANDOM),y)
+CONFIGURED_APPS += examples/random
+endif
+
 ifeq ($(CONFIG_EXAMPLES_RELAYS),y)
 CONFIGURED_APPS += examples/relays
 endif
